--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h1>Welcome to Harari Tech</h1>
     <p>Please review our policies:</p>
     <ul>
-        <li><a href="privacy-policy.html">Privacy Policy</a></li>
+        <li><a href="privacy_policy.html">Privacy Policy</a></li>
     </ul>
 </body>
 </html>
