--- a/index.html
+++ b/index.html
@@ -7,32 +7,63 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
+            background-color: #f4f4f4;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .container {
+            text-align: center;
+            background: #fff;
+            padding: 40px;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
         }
         h1 {
-            color: #333;
+            color: #2c3e50;
+            font-size: 2.5em;
+            margin-bottom: 20px;
         }
-        img {
-            width: 150px;
-            display: block;
-            margin: 0 auto 20px auto;
+        p {
+            font-size: 1.2em;
+            margin-bottom: 20px;
+            color: #555;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin-bottom: 10px;
         }
         a {
             text-decoration: none;
             color: #007BFF;
+            font-weight: bold;
+            font-size: 1.2em;
         }
         a:hover {
+            color: #0056b3;
             text-decoration: underline;
+        }
+        img {
+            width: 150px;
+            margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
-    <img src="harari_tech_logo.jpeg" alt="Harari Tech Logo">
-    <h1>Welcome to Harari Tech</h1>
-    <p>Please review our policies:</p>
-    <ul>
-        <li><a href="privacy_policy.html">Privacy Policy</a></li>
-    </ul>
+    <div class="container">
+        <img src="harari_tech_logo.jpeg" alt="Harari Tech Logo">
+        <h1>Welcome to Harari Tech</h1>
+        <p>Your privacy and security are our top priority. Please review our policies:</p>
+        <ul>
+            <li><a href="privacy_policy.html">Privacy Policy</a></li>
+        </ul>
+    </div>
 </body>
 </html>
