--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -11,7 +11,7 @@
             margin: 40px auto;
             max-width: 800px;
             padding: 20px;
-            background-color: #f9f9f9;
+            background-color: #fff;
             color: #333;
         }
         h1 {
@@ -38,7 +38,7 @@
         }
         .contact-info {
             margin-top: 40px;
-            padding: 20px;
+            padding: 3px;
             background-color: #e9ecef;
             border-left: 4px solid #007BFF;
         }
