--- a/terms_and_conditions.html
+++ b/terms_and_conditions.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <h1>Terms and Conditions</h1>
-    <p><strong>Last Updated:</strong> [Insert Date]</p>
+    <p><strong>Last Updated:</strong> 08/13/2024</p>
 
     <h2>1. Acceptance of Terms</h2>
     <p>By installing, accessing, or using the Harari Tech Jira Story Points Automation App ("the App"), you agree to be bound by these Terms and Conditions ("Terms"). If you do not agree with these Terms, do not use the App.</p>
@@ -74,7 +74,7 @@
     </ul>
 
     <h2>8. Governing Law</h2>
-    <p>These Terms are governed by and construed in accordance with the laws of [Your Jurisdiction], without regard to its conflict of law principles.</p>
+    <p>These Terms are governed by and construed in accordance with the laws of the Province of Ontario, Canada, without regard to its conflict of law principles.</p>
 
     <h2>9. Contact Information</h2>
     <p>If you have any questions or concerns about these Terms, please contact us at:</p>
