--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <p>Your privacy and security are our top priority. Please review our policies:</p>
         <ul>
             <li><a href="privacy_policy.html">Privacy Policy</a></li>
-            <li><a href="terms_and_conditions.html">Terms And Condition</a></li>
+            <li><a href="terms_and_conditions.html">Terms And Conditions</a></li>
         </ul>
     </div>
 </body>
