--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <ul>
             <li><a href="privacy_policy.html">Privacy Policy</a></li>
             <li><a href="terms_and_conditions.html">Terms And Conditions</a></li>
+            <li><a href="security_policy.html">Security Policy</a></li>
         </ul>
     </div>
 </body>
