--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <li><a href="privacy_policy.html">Privacy Policy</a></li>
             <li><a href="terms_and_conditions.html">Terms And Conditions</a></li>
             <li><a href="security_policy.html">Security Policy</a></li>
+            <li><a href="StoryPointAutomator-HowToGuide.pdf" target="_blank">How to Use Our App</a></li>
         </ul>
     </div>
 </body>
